<resources>
    <string name="app_name">Trackie</string>
    <string name="action_share">Share</string>
    <string name="action_settings">Settings</string>
    <string name="settings">Settings</string>
    <string name="calculate">Calculate</string>
    <string name="action_home">Home</string>
    <string name="graph_title">%s\'s Progress</string>
    <string name="default_graph_title">Your Progress</string>
    <string name="check_in">Check In</string>
    <string name="add">Add</string>
    <string name="today_weight">Today\'s Weight:</string>
    <string name="calculator">Body Calculator</string>
    <string name="bmi_calc">BMI Calculator</string>
    <string name="history">History</string>
    <string name="about">About</string>
    <string name="date">Date</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="preferred_unit">Preferred Unit</string>
    <string name="user_details">Set Personal Details</string>
    <string name="save">Save</string>
    <string name="wipe">Wipe All Data</string>
    <string name="confirm_title">Wipe All Data</string>
    <string name="confirm_title_sample_data">Load Sample Data</string>
    <string name="confirm_desc">Are you sure you want to wipe all data? This includes weights and preferences!\n\nTrackie will restart</string>
    <string name="confirm_desc_sample_data">Are you sure you want to load sample data? This includes weights and preferences!\n\nTrackie will restart</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="stats_error">Stats and calculations will be available to you after 5 entries\n\nYou can load sample data from the settings menu</string>
    <string name="enter_a_weight">Enter a weight first</string>
    <string name="nav_header_error">Have you entered all your personal details?\n\nTo help make our calculations more precise, you can set these in the settings menu.</string>
    <string name="name">Name:</string>
    <string name="age">Age:</string>
    <string name="height_with_unit">Height (%s):</string>
    <string name="weight_with_unit">Weight (%s):</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="gender">Gender:</string>
    <string name="nav_welcome">Welcome to Trackie %s.\n\nGood to see you back</string>
    <string name="weight_change_last_week">Over the last week, your average daily weight change is: %s%s</string>
    <string name="keep_it_up">Keep it up!</string>
    <string name="keep_pushing">You can do it. Keep pushing!</string>
    <string name="gain_streak">You are %d days into a weight gain streak!</string>
    <string name="loss_streak">You are %d days into a weight loss streak!</string>
    <string name="no_streak">No Current Streak</string>
    <string name="bmi_main">Your BMI is: %.1f</string>
    <string name="details">What is a BMI?</string>
    <string name="underweight">Underweight</string>
    <string name="normal">Healthy</string>
    <string name="overweight">Overweight</string>
    <string name="obese">Obese</string>
    <string name="extremely_obese">Extremely Obese</string>
    <string name="maintenence_calories">Daily Calories to maintain weight: %s</string>
    <string name="bmi_body">"%s, Your BMI indicates that you are %s.\nKeep in mind that this is not an exact representation of your health\n\nFor more information see our details page linked below</string>
    <string name="goal_weight">Goal Weight:</string>
    <string name="deficit">Calorie Deficit: </string>
    <string name="days_result">It will take %s days to reach your goal</string>
    <string name="body_calc_null">Enter user data first!</string>
    <string name="activity_level">Activity Level: </string>
    <string name="share_title">Share your Trackie Data: </string>
    <string name="bmi_website">http://healthyweight.health.gov.au/wps/portal/Home/get-started/are-you-a-healthy-weight/bmi/</string>
    <string name="share_bmi">%s\'s BMI is: %s</string>
    <string name="share_body">It would take me %d days to reach your goal of %.1f%s given a calorie deficit of %d</string>
    <string name="github_readme">https://github.com/JaiLaff/Trackie/blob/master/README.md</string>
    <string name="github">https://github.com/JaiLaff/Trackie/</string>
    <string name="no_data">Welcome to Trackie, to begin enter data below</string>
    <string name="load_sample">Load Sample Data</string>
</resources>
