<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ico_home_black"
            android:title="@string/action_home"/>
        <item
            android:id="@+id/nav_converter"
            android:icon="@drawable/ico_convert_black"
            android:title="@string/calculator" />
        <item
            android:id="@+id/nav_bmi_calc"
            android:icon="@drawable/ico_bmi_black"
            android:title="@string/bmi_calc"/>
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ico_history_black"
            android:title="@string/history" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ico_info_black"
            android:title="@string/about" />
        <item
            android:id="@+id/nav_none"
            android:title=""
            android:visible="false"
            android:checkable="true"/>
    </group>
</menu>